--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </a>
   
         <!--  blog  -->
-        <a target="_blank" href="...">
+        <a target="_blank" href="https://acka1.github.io/blog/">
             <img class="icons" src="./icone/blogging (1).png"/>
         </a>
       </section>
